# service-util

./: .pre-commit-config.yaml  Cargo.toml  README.md
core/: Cargo.toml
core/src/: client.rs  env.rs  error.rs  future.rs  lib.rs  server.rs  trace.rs  traits.rs
examples/workspace/: Cargo.toml
examples/workspace/examples/: workspace.rs
proc-macros/: Cargo.toml
proc-macros/core/: Cargo.toml
proc-macros/core/src/: id.rs  lib.rs  split.rs  with_variant_update.rs
proc-macros/src/: lib.rs
service-util/: Cargo.toml
src/: client.rs  error.rs  lib.rs  server.rs  trace.rs
