[package]
name = "service-util"
version = "0.1.0"
authors = ["Trey Lowerison"]
edition = "2021"

[dependencies]
anyhow = "1"
async-backtrace = "0.2"
cfg-if = "1"
derivative = "2"
hyper = "0"
lazy_static = "1"
log = "0"
paste = "1"
thiserror = "1"
tracing = "0"

async-graphql = { version = "4", optional = true }
async-trait = { version = "0", optional = true }
axum-core = { version = "0", optional = true }
cookie = { version = "0", optional = true }
concat-string = { version = "1", optional = true }
data-encoding = { version = "2", optional = true }
derive_more = { git = "https://github.com/tlowerison/derive_more", optional = true }
diesel = { version = "2", optional = true }
diesel-util = { git = "https://github.com/tlowerison/diesel-util", rev = "bc7d164", optional = true }
futures = { version = "0", optional = true }
mongodb = { version = "2", optional = true }
opentelemetry = { version = "0", optional = true }
opentelemetry-jaeger = { version = "0", optional = true }
ring = { version = "0", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
serde_qs = { version = "0", optional = true }
session-util = { git = "https://github.com/tlowerison/session-util", rev = "bfee5b2", features = ["account-session"], optional = true }
tonic = { version = "0", optional = true }
tokio = { version = "1", features = ["signal"], optional = true }
tower = { version = "0", optional = true }
tower-http = { version = "0", features = ["request-id"], optional = true }
tower-layer = { version = "0", optional = true }
tower-service = { version = "0", optional = true }
tracing-error = { version = "0", optional = true }
tracing-log = { version = "0", optional = true }
tracing-opentelemetry = { version = "0", optional = true }
tracing-subscriber = { version = "0", features = ["env-filter"], optional = true }
tracing-tree = { version = "0", optional = true }
uuid = { version = "1", features = ["serde", "v4"], optional = true }

axum-05 = { package = "axum", version = "0.5", default-features = false, features = ["headers"], optional = true }
axum-06 = { package = "axum", version = "0.6", default-features = false, features = ["headers"], optional = true }

[features]
default = ["http1", "max-allowed-request-body-size-medium"]
axum-05 = ["dep:axum-05", "session-util/axum-core-02"]
axum-06 = ["dep:axum-06", "session-util/axum-core-03"]
client = ["async-trait", "concat-string", "futures", "hyper/client", "serde", "serde_json", "serde_qs", "trace"]
db = ["diesel", "diesel-util", "serde"]
graphql = ["async-graphql", "diesel", "diesel-util", "serde"]
grpc = ["tonic"]
http1 = ["hyper/http1"]
http2 = ["hyper/http2"]
log_error = []
max-allowed-request-body-size-large = []
max-allowed-request-body-size-medium = []
max-allowed-request-body-size-small = []
server = ["derive_more", "futures", "opentelemetry/rt-tokio", "serde", "serde_json", "session-util", "tokio", "tokio/macros", "tower", "tower/timeout", "trace", "uuid"]
trace = ["opentelemetry", "opentelemetry-jaeger/rt-tokio", "tower-http", "tracing-error", "tracing-log", "tracing-opentelemetry", "tracing-subscriber", "tracing-tree", "uuid"]
