[workspace]
members = [
  "core",
  "service-util",
  "proc-macros",
]
exclude = []

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Trey Lowerison"]

[workspace.dependencies]
anyhow = "1"
async-backtrace = "0.2"
async-graphql-4 = { package = "async-graphql", version = "4" }
async-graphql-5 = { package = "async-graphql", version = "5" }
async-graphql-6 = { package = "async-graphql", version = "6" }
async-trait = "0"
axum-05 = { package = "axum", version = "0.5", default-features = false, features = ["headers"] }
axum-06 = { package = "axum", version = "0.6", default-features = false, features = ["headers"] }
axum-core = "0"
cfg-if = "1"
chrono = { version = "0", features = ["std"] }
color-eyre = "0"
cookie = "0"
concat-string = "1"
convert_case = "^0.6"
data-encoding = "2"
derivative = "2"
derive_more = { git = "https://github.com/tlowerison/derive_more" }
diesel = "2"
diesel-util = { git = "https://github.com/tlowerison/diesel-util", rev = "6eab456", default-features = false }
futures = "0"
hyper = "0"
itertools = "^0.10"
lazy_static = "1"
log = "0"
mongodb = "2"
opentelemetry = "0.18"
opentelemetry-jaeger = "0.17"
paste = "1"
pin-project-lite = "0"
proc-macro2 = "1"
proc-macro-util = { git = "https://github.com/tlowerison/proc-macro-util", rev = "a06c7e4" }
quote = "1"
ring = "0"
serde = "1"
serde_json = "1"
serde_qs = "0"
session-util = { git = "https://github.com/tlowerison/session-util", rev = "bfee5b2", features = ["account-session"] }
syn = "2"
thiserror = "1"
tonic = "0"
tokio = { version = "1", features = ["signal"] }
tower = "0"
tower-http = { version = "0", features = ["request-id"] }
tower-layer = "0"
tower-service = "0"
tracing = "0"
tracing-error = "0"
tracing-log = "0"
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0", features = ["env-filter"] }
tracing-tree = "0"
uuid = { version = "1", features = ["serde", "v4"] }

service-util-proc-macros-core.path = "proc-macros/core"
